--- a/package.json
+++ b/package.json
@@ -8,13 +8,17 @@
     "start": "next start"
   },
   "dependencies": {
+    "@types/styled-components": "^5.1.3",
+    "axios": "^0.20.0",
     "next": "9.5.3",
     "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "react-dom": "16.13.1",
+    "styled-components": "^5.2.0"
   },
   "devDependencies": {
     "@types/node": "^14.11.2",
     "@types/react": "^16.9.49",
+    "babel-plugin-styled-components": "^1.11.1",
     "typescript": "^4.0.3"
   }
 }
