--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
     "@types/prismic-dom": "^2.1.1",
     "@types/styled-components": "^5.1.3",
     "axios": "^0.20.0",
-    "next": "9.5.3",
+    "next": "^10.0.0",
     "prismic-dom": "^2.2.4",
     "prismic-javascript": "^3.0.2",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
     "styled-components": "^5.2.0"
   },
   "devDependencies": {
